fixes hidden overflow

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -49,7 +49,7 @@ body {
 } */
 
 /* Media query for mobile devices */
-@media (max-width: 1100px) {
+@media (max-width: 1200px) {
   body {
     background-color: black;
     overflow:visible;
